# taguchi-ui

./: README.md  package.json  svelte.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: analysis.rs  builder.rs  catalogue.rs  doe_analysis.rs  export.rs  mod.rs
src/lib/components/charts/: BalanceChart.svelte  CorrelationHeatmap.svelte  index.ts
src/lib/components/data/: MatrixDisplay.svelte  index.ts
src/lib/components/doe/: ANOVATable.svelte  FactorConfigTable.svelte  FactorRankingChart.svelte  MainEffectsPlot.svelte  OptimalSettingsCard.svelte  ResponseConfigForm.svelte  ResultsGrid.svelte  SNRatioPlot.svelte  index.ts
src/lib/components/form/: Button.svelte  Input.svelte  Select.svelte  index.ts
src/lib/components/layout/: ContextPanel.svelte  NavItem.svelte  NavSection.svelte  Sidebar.svelte  index.ts
src/lib/components/overlay/: CommandPalette.svelte
src/lib/stores/: analysis.svelte.ts  app.svelte.ts  arrays.svelte.ts  catalogue.svelte.ts  doe.svelte.ts  experiments.svelte.ts
src/lib/styles/: reset.css  utilities.css  variables.css
src/lib/types/: index.ts
src/lib/utils/: math.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/analysis/[id]/: +page.svelte  +page.ts
src/routes/builder/: +page.svelte
src/routes/catalogue/: +page.svelte
src/routes/doe/: +page.svelte
src/routes/experiments/: +page.svelte
src/routes/expert/: +page.svelte
src/routes/viewer/[id]/: +page.svelte
(+12 files in other folders)
